# opengl_cmake

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
src/: Camera.hpp  Shader.cpp  Shader.h  main.cpp
